--- a/card.html
+++ b/card.html
@@ -19,6 +19,30 @@
       </div>
     </div>
 
+    <div id="content-payment-message collapse">
+      <div class="contents-payment-error collapse">
+        <p> 無効な決済リクエストです。 </p>
+        <button class="btn btn-outline-warning" id="return-button-error"> やり直す </button>
+      </div>
+      <div class="contents-payment-not-yet collapse">
+        <p> クレジットカード、もしくは暗証番号に誤りがあります。 </p>
+        <button class="btn btn-outline-warning" id="return-button-not-yet"> やり直す </button>
+      </div>
+      <div class="contents-payment-result collapse">
+        <p> お支払いを完了しました。 </p>
+        <button class="btn btn-outline-success" id="return-button-normal"> トップへ戻る </button>
+      </div>
+
+      <div class="other-actions-container">
+        <button class="btn btn-outline-secondary" id="return-button-default">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+            </svg>
+            戻る
+        </button>
+      </div>
+    </div>
+
     <script src="lib/jquery-3.5.1.min.js"></script>
     <script src="lib/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
     <script src="https://js.stripe.com/v3/"></script>
